Add second container and proper step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,22 +5,27 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
+  probe-container-under-test:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
+      # Primary container image where all steps run.
       - image: cimg/base:stable
+      # Secondary container image on common network as seen at https://circleci.com/docs/using-docker
+      - image: cimg/mariadb:10.6
+        command: [mongod, --smallfiles]
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+      # command will execute in an Ubuntu-based container
+      # and can access MariaDB on localhost
+      - run: sleep 5 && nc -vz localhost 3306
+      - run: echo "Done!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  default-workflow:
     jobs:
-      - say-hello
+      - probe-container-under-test
